# ente

.github/: CODEOWNERS
mobile/: pubspec.yaml
mobile/android/: local.properties
mobile/apps/photos/: pubspec.yaml
mobile/apps/photos/android/: build.gradle
mobile/apps/photos/android/app/: build.gradle  proguard-rules.pro
mobile/apps/photos/docs/vscode/: launch.json
mobile/apps/photos/hooks/: pre-commit-fdroid
mobile/apps/photos/ios/: GoogleService-Info.plist
mobile/apps/photos/ios/Runner/: Info.plist
mobile/apps/photos/ios/Runner.xcodeproj/: project.pbxproj
mobile/apps/photos/lib/: app.dart  ente_theme_data.dart  main.dart
mobile/apps/photos/lib/core/: configuration.dart  (+1 more)
mobile/apps/photos/rust/: Cargo.toml
mobile/apps/photos/scripts/: create_tag.sh
mobile/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
mobile/ios/Runner/: GeneratedPluginRegistrant.m
mobile/lib/models/search/: search_types.dart
mobile/lib/services/: gallery_edit_service.dart
mobile/lib/ui/tabs/: home_widget.dart
server/: .gitignore  compose.yaml  go.mod  go.sum
server/cmd/museum/: main.go
server/configurations/: example.yaml  local.yaml
server/ente/: up_billing.go
server/pkg/api/: admin.go  up_admin.go  up_user.go  user.go
server/pkg/controller/: billing.go  up_billing.go
server/pkg/controller/user/: userauth.go
server/pkg/middleware/: auth.go  up_access_token.go
server/pkg/repo/: trash.go
server/pkg/repo/passkey/: passkey.go
server/pkg/repo/public/: file_link.go
server/pkg/utils/: user.go
server/pkg/utils/auth/: jwt_validator.go
(+117 files in other folders)
